# Discord-top-role-bot

./: README.md  flake.nix  pyproject.toml
docker-composes/tests/: compose.yaml
src/discord_top_role_bot/: __main__.py  config.py
src/discord_top_role_bot/allocation/: __init__.py
src/discord_top_role_bot/allocation/adapters/: orm.py
src/discord_top_role_bot/allocation/models/: message.py
src/discord_top_role_bot/allocation/repository/: __init__.py
src/discord_top_role_bot/allocation/repository/abc/: __init__.py  messages.py
src/discord_top_role_bot/allocation/repository/impls/: __init__.py  messages.py
src/discord_top_role_bot/config/: __init__.py
src/discord_top_role_bot/discord_events/: base.py
src/discord_top_role_bot/discord_events/impls/: message_logger.py
src/discord_top_role_bot/events/: base.py
src/discord_top_role_bot/events/impls/: message_logger.py
src/discord_top_role_bot/schedule_events/: update_discord_roles.py
tests/allocation/: messages_test.py
