[tool.poetry]
name = "discord-top-role-bot"
version = "0.1.1"
description = ""
authors = ["LEv145 <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "discord_top_role_bot", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
hikari = "^2.0.0.dev112"
hikari-tanjun = "^2.10.1a1"
dataconf = "^2.1.2"
sqlalchemy = "^1.4.44"
sqlalchemy2-stubs = "^0.0.2a29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
